552-jwt/gateway/authorization-policy-case1.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: gateway-jwt-case1
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: DENY
  rules:
    - from:
        - source:
            requestPrincipals:
              - '*'
      when:
        - key: request.auth.claims[iss]
          notValues:
            - books-auth
