552-jwt/gateway/authorization-policy-exam1.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: jwt-authz
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: DENY
  rules:
    - from:
        - source:
            notRequestPrincipals: ["*"]  # JWT 없는 요청 거부
      to:
        - operation:
            notPaths: ["/auth/token", "/auth/login"]  # 이 경로는 예외
