552-jwt/gateway/authorization-policy-exam2.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-put-delete
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: DENY
  rules:
    - to:
        - operation:
            methods: ["PUT", "DELETE"]
      when:
        - key: request.auth.claims[role]
          values: ["admin"]
